[package]
name = "pathtracer"
version = "0.1.0"
authors = ["Jack Stanek <stanekjack@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rand = { version = "0.8.0", features = ["small_rng"] }
minifb = "0.19.1"
